--- a/forsiden.html
+++ b/forsiden.html
@@ -7,9 +7,9 @@
 	
 	<title>Leder.FDF.dk</title>
 	
-	<link rel="stylesheet" href="common.css" media="all">
-	<link rel="stylesheet" href="screen.css" media="screen">
-	<link rel="stylesheet" href="print.css" media="print">
+	<link rel="stylesheet" href="style/css/common.css" media="all">
+	<link rel="stylesheet" href="style/css/screen.css" media="screen">
+	<link rel="stylesheet" href="style/css/print.css" media="print">
 
 	<link rel="stylesheet" href="jquery/jquery-ui.css" media="screen">
 	<script type="text/javascript" src="jquery/jquery-1.8.2.min.js"></script>
@@ -90,6 +90,27 @@
 				</div>
 				<div class="row">
 					<div class="span3 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+				</div>
+				<div class="row">
+					<div class="span1 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+				</div>
+				<div class="row">
+					<div class="span2 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+				</div>
+				<div class="row">
+					<div class="span1 display-bounds"></div>
+					<div class="span1 display-bounds"></div>
+					<div class="span2 display-bounds"></div>
+				</div>
+				<div class="row">
+					<div class="span1 display-bounds"></div>
+					<div class="span2 display-bounds"></div>
 					<div class="span1 display-bounds"></div>
 				</div>
 			</section>
