Modify user menu to have one link and add lock icon

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 			</nav>
 
 			<ol class="user">
-				<li><a href="#" data-modal="true" data-options="{'height':'100','width':'100'}" title="Ny bruger">Ny bruger</a></li>
-				<li><a href="#" data-modal="true" title="Log ind">Log ind</a></li>
+				<li><a href="#" title="Mit FDF.dk">Mit FDF.dk</a></li>
 			</ol>
 		</div>
 	</aside>
