Lots of elements from grid development removed

--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
 				</nav>
 			</header>
 			<section id="main-content">
-				<div class="row">
-					<div class="span4 display-bounds">
-					</div>
-				</div>
 				<div id="news-rotator" class="row">
 					<div class="span3">
 						<div class="news-item">
@@ -77,40 +73,10 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="span1 offset3 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span2 display-bounds"></div>
-					<div class="span2 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span1 display-bounds"></div>
-					<div class="span3 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span3 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span1 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span2 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span1 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
-					<div class="span2 display-bounds"></div>
-				</div>
-				<div class="row">
-					<div class="span1 display-bounds"></div>
-					<div class="span2 display-bounds"></div>
-					<div class="span1 display-bounds"></div>
+					<div class="span4">
+						<h1>Hurra for indhold!</h1>
+						<p>Bla bla bla...</p>
+					</div>
 				</div>
 			</section>
 			<aside id="databases">
@@ -119,8 +85,8 @@
 					<div class="span1 display-bounds"></div>
 					<div class="span1">
 						<hgroup>
-							<h2>Lege</h2>
-							<h3>Tonselege</h3>
+							<h2><a href="#">Lege</a></h2>
+							<h3><a href="#">Tonselege</a></h3>
 							<h4><a href="#">Troldehovedet</a></h4>
 						</hgroup>
 						<p>På asfalt tegnes med kridt et stort troldehoved (på anden grund markeres med tov), som alle deltag…</p>
