Simple content snippet style added. Lots of minor style tweaks

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
 						<p>Bla bla bla...</p>
 					</div>
 				</div>
+				<div class="row">
+					<div class="span1">
+						<div class="content-snippet">
+							<h1>Hurra for indhold!</h1>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+					<div class="span1">
+						<div class="content-snippet">
+							<h1>Hurra for indhold!</h1>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+				</div>
 			</section>
 			<aside id="databases">
 				<h1>Databaser</h1>
