--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 							<p>Bla bla bla...</p>
 						</div>
 					</div>
+					<div class="span2">
+						<div class="content-snippet">
+							<h1>Hurra for indhold!</h1>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
 				</div>
 			</section>
 			<aside id="databases">
