--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width; user-scaleable=no"> 
+	<meta name="viewport" content="width=device-width; user-scaleable=no; initial-scale: 1"> 
 	
 	
 	<title>Leder.FDF.dk</title>
