New right-content structure and usage of content-snippets for FCE purpsoe

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 				<div class="row">
 					<div class="span1">
 						<div class="content-snippet">
+							<img src="http://leder.fdf.dk/fileadmin/filer/leder/l%C3%B8bsdatabasen%20-%20asbj%C3%B8rn.jpg" width="100%" />
 							<h1>Hurra for indhold!</h1>
 							<p>Bla bla bla...</p>
 						</div>
@@ -119,27 +120,29 @@
 		</article>
 		<article id="groups">
 			<h1>Grupper</h1>
-			<p><a href="#">Hvad er grupper?</a></p>
-				<p>FDFs forum og gruppesystem. Her har du mulighed for at debattere og dele billeder med andre brugere på Portalen.</p>
-				
-			<section class="group-collection">
-				<h2>Basisgrupper</h2>
+			<div class="content-snippet">
+				<img src="http://www.googleventures.com/img/masonry/joe-kraus-default.gif" width="100%" />
+				<h2>Aktive grupper</h2>
 				<ul>
 					<li><a href="#">Landsmøde 2012</a></li>
 					<li><a href="#">Blåt og blandet</a></li>
 					<li><a href="#">Leg og fantasi</a></li>
 					<li><a href="#">Landsforbundet</a></li>
 				</ul>
-			</section>
-			<section class="group-collection">
-				<h2>Interessegrupper</h2>
+			</div>
+
+			<h1>Kalender</h1>
+			<div class="content-snippet">
+				<img src="http://www.googleventures.com/img/masonry/blog.jpg" width="100%" />
+				<h2>Forbundskalender</h2>
 				<ul>
 					<li><a href="#">Landsmøde 2012</a></li>
 					<li><a href="#">Blåt og blandet</a></li>
 					<li><a href="#">Leg og fantasi</a></li>
 					<li><a href="#">Landsforbundet</a></li>
 				</ul>
-			</section>
+			</div>
+
 		</article>
 	</div>
 	<footer>
