Change h* types of content

--- a/index.html
+++ b/index.html
@@ -74,34 +74,73 @@
 				</div>
 				<div class="row">
 					<div class="span4">
-						<h1>Hurra for indhold!</h1>
+						<h2>Hurra for indhold!</h2>
 						<p>Bla bla bla...</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="span1">
 						<div class="content-snippet">
-							<img src="http://leder.fdf.dk/fileadmin/filer/leder/l%C3%B8bsdatabasen%20-%20asbj%C3%B8rn.jpg" width="100%" />
-							<h1>Hurra for indhold!</h1>
+							<h2>Hurra for indhold!</h2>
 							<p>Bla bla bla...</p>
 						</div>
 					</div>
 					<div class="span1">
 						<div class="content-snippet">
-							<h1>Hurra for indhold!</h1>
+							<h2>Hurra for indhold!</h2>
 							<p>Bla bla bla...</p>
 						</div>
 					</div>
 					<div class="span2">
 						<div class="content-snippet">
-							<h1>Hurra for indhold!</h1>
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span2">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+					<div class="span1">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+					<div class="span1">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span1">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+					<div class="span2">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
+							<p>Bla bla bla...</p>
+						</div>
+					</div>
+					<div class="span1">
+						<div class="content-snippet">
+							<h2>Hurra for indhold!</h2>
 							<p>Bla bla bla...</p>
 						</div>
 					</div>
 				</div>
 			</section>
 			<aside id="databases">
-				<h1>Databaser</h1>
+				<h2>Genveje</h2>
 				<div class="row">
 					<div class="span1 display-bounds"></div>
 					<div class="span1">
@@ -119,10 +158,10 @@
 			</aside>
 		</article>
 		<article id="groups">
-			<h1>Grupper</h1>
+			<h2>Grupper</h2>
 			<div class="content-snippet">
 				<img src="http://www.googleventures.com/img/masonry/joe-kraus-default.gif" width="100%" />
-				<h2>Aktive grupper</h2>
+				<h3>Aktive grupper</h3>
 				<ul>
 					<li><a href="#">Landsmøde 2012</a></li>
 					<li><a href="#">Blåt og blandet</a></li>
@@ -131,10 +170,10 @@
 				</ul>
 			</div>
 
-			<h1>Kalender</h1>
+			<h2>Kalender</h2>
 			<div class="content-snippet">
 				<img src="http://www.googleventures.com/img/masonry/blog.jpg" width="100%" />
-				<h2>Forbundskalender</h2>
+				<h3>Forbundskalender</h3>
 				<ul>
 					<li><a href="#">Landsmøde 2012</a></li>
 					<li><a href="#">Blåt og blandet</a></li>
