Magazine image added and illustration for content snippets styld

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 				<div class="row">
 					<div class="span1">
 						<div class="content-snippet">
+							<img src="grafik/leder-forsider.png" class="illustration" />
 							<h2>Hurra for indhold!</h2>
 							<p>Bla bla bla...</p>
 						</div>
