Groups and calendar now moves to the bottom of the content on small screens

--- a/index.html
+++ b/index.html
@@ -140,6 +140,36 @@
 					</div>
 				</div>
 			</section>
+			<article id="groups">
+				<div class="row">
+					<div class="span2">
+						<h2>Grupper</h2>
+						<div class="content-snippet">
+							<img src="http://www.googleventures.com/img/masonry/joe-kraus-default.gif" width="100%" />
+							<h3>Aktive grupper</h3>
+							<ul>
+								<li><a href="#">Landsmøde 2012</a></li>
+								<li><a href="#">Blåt og blandet</a></li>
+								<li><a href="#">Leg og fantasi</a></li>
+								<li><a href="#">Landsforbundet</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="span2">
+						<h2>Kalender</h2>
+						<div class="content-snippet">
+							<img src="http://www.googleventures.com/img/masonry/blog.jpg" width="100%" />
+							<h3>Forbundskalender</h3>
+							<ul>
+								<li><a href="#">Landsmøde 2012</a></li>
+								<li><a href="#">Blåt og blandet</a></li>
+								<li><a href="#">Leg og fantasi</a></li>
+								<li><a href="#">Landsforbundet</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</article>
 			<aside id="databases">
 				<h2>Genveje</h2>
 				<div class="row">
@@ -157,32 +187,6 @@
 					<div class="span1 display-bounds"></div>
 				</div>
 			</aside>
-		</article>
-		<article id="groups">
-			<h2>Grupper</h2>
-			<div class="content-snippet">
-				<img src="http://www.googleventures.com/img/masonry/joe-kraus-default.gif" width="100%" />
-				<h3>Aktive grupper</h3>
-				<ul>
-					<li><a href="#">Landsmøde 2012</a></li>
-					<li><a href="#">Blåt og blandet</a></li>
-					<li><a href="#">Leg og fantasi</a></li>
-					<li><a href="#">Landsforbundet</a></li>
-				</ul>
-			</div>
-
-			<h2>Kalender</h2>
-			<div class="content-snippet">
-				<img src="http://www.googleventures.com/img/masonry/blog.jpg" width="100%" />
-				<h3>Forbundskalender</h3>
-				<ul>
-					<li><a href="#">Landsmøde 2012</a></li>
-					<li><a href="#">Blåt og blandet</a></li>
-					<li><a href="#">Leg og fantasi</a></li>
-					<li><a href="#">Landsforbundet</a></li>
-				</ul>
-			</div>
-
 		</article>
 	</div>
 	<footer>
